# note-agent

./: .env.example  .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_input.txt
config/: __init__.py  llm.py  settings.py
note_agent/: graph.py  input_loader.py  models.py  prompts.py  schemas.py  search.py  service.py  state.py  storage.py  tools.py
runs/run_20260521_120832_b8543c70/: events.jsonl  run.json
runs/run_20260522_104936_b3a33f01/: events.jsonl  final_state.json  run.json
runs/run_20260522_140845_e803a373/: events.jsonl  final_state.json  run.json
scripts/: main.py
src/note_agent/: __init__.py  assets.py  cli.py  graph.py  prompts.py  retrieval.py  schemas.py  service.py  storage.py  utils.py  web.py
src/note_agent/agent/: __init__.py  events.py  graph.py  llm.py  prompts.py  runner.py  service.py  state.py  tracker.py
src/note_agent/assets/: __init__.py  tools.py  types.py
src/note_agent/config/: __init__.py  llm.py  settings.py
src/note_agent/domain/: __init__.py  api.py  models.py
src/note_agent/io/: __init__.py  events.py  input_loader.py  markdown.py  storage.py  text.py
src/note_agent/notion/: __init__.py  client.py  (+2 more)
tests/: conftest.py  test_input_loader.py  test_markdown_utils.py  test_schemas.py  test_text_utils.py
tests/unit/: test_assets_agent.py  test_graph_agent.py  test_input_api.py  test_input_loader.py  test_markdown_utils.py  test_notion_client.py  test_notion_converter.py  test_notion_publish.py  test_schemas.py  test_settings_api.py  test_text_utils.py  test_tools_api.py
(+10 files in other folders)
